// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIntegrationAppearance component should display correctly when creating a new chat integration 1`] = `
<div>
  <gs
    tag="ol"
  >
    <bs
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </bs>
    <bs
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </bs>
    <bs
      tag="li"
    >
      New chat integration
    </bs>
  </gs>
  <h1>
    New chat integration
  </h1>
  <gt
    fluid={true}
    tag="div"
  >
    <bt
      tag="div"
    >
      <Ot
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <rl
          className="ui form"
          onSubmit={[Function]}
          tag="form"
        >
          <div>
            <div>
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value=""
              />
              <FileField
                accept="image/*"
                help="The image must have a square format. Example: 200x200 pixels"
                label="Company icon"
                noPreview={false}
                onChange={[Function]}
                placeholder="Select a file..."
                returnFiles={false}
                type="file"
                value=""
              />
              <InputField
                label="Introduction text"
                onChange={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <ei
            className=""
            color="primary"
            disabled={false}
            tag="button"
            type="submit"
          >
            Add new chat
          </ei>
        </rl>
      </Ot>
      <Ot
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={
            Immutable.Map {
            }
          }
          icon=""
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          mainColor="#0d87dd"
          name=""
        />
      </Ot>
    </bt>
  </gt>
</div>
`;

exports[`ChatIntegrationAppearance component should display correctly when integration is loading 1`] = `
<div>
  <gs
    tag="ol"
  >
    <bs
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </bs>
    <bs
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </bs>
    <bs
      tag="li"
    >
      hellosmoochintegration
    </bs>
    <bs
      active={true}
      tag="li"
    >
      Appearance
    </bs>
  </gs>
  <h1>
    Appearance
  </h1>
  <gt
    fluid={true}
    tag="div"
  >
    <bt
      tag="div"
    >
      <Ot
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <rl
          className="ui form"
          onSubmit={[Function]}
          tag="form"
        >
          <div>
            <div>
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value=""
              />
              <FileField
                accept="image/*"
                help="The image must have a square format. Example: 200x200 pixels"
                label="Company icon"
                noPreview={false}
                onChange={[Function]}
                placeholder="Select a file..."
                returnFiles={false}
                type="file"
                value=""
              />
              <InputField
                label="Introduction text"
                onChange={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <ei
            className="btn-loading"
            color="primary"
            disabled={true}
            tag="button"
            type="submit"
          >
            Save changes
          </ei>
          <ConfirmButton
            className="pull-right"
            color="danger"
            confirm={[Function]}
            content="Are you sure you want to delete this integration?"
            disabled={false}
            id=""
            loading={false}
            outline={true}
            placement="bottom"
            skip={false}
            title="Are you sure?"
            type="button"
          >
            Delete chat
          </ConfirmButton>
        </rl>
      </Ot>
      <Ot
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={
            Immutable.Map {
            }
          }
          icon=""
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          mainColor="#0d87dd"
          name=""
        />
      </Ot>
    </bt>
  </gt>
</div>
`;

exports[`ChatIntegrationAppearance component should display correctly when updating an existing integration 1`] = `
<div>
  <gs
    tag="ol"
  >
    <bs
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations"
      >
        Integrations
      </Link>
    </bs>
    <bs
      tag="li"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/integrations/smooch_inside"
      >
        Chat
      </Link>
    </bs>
    <bs
      tag="li"
    >
      hellosmoochintegration
    </bs>
    <bs
      active={true}
      tag="li"
    >
      Appearance
    </bs>
  </gs>
  <h1>
    Appearance
  </h1>
  <gt
    fluid={true}
    tag="div"
  >
    <bt
      tag="div"
    >
      <Ot
        style={
          Object {
            "paddingLeft": 0,
          }
        }
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <rl
          className="ui form"
          onSubmit={[Function]}
          tag="form"
        >
          <div>
            <div>
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value=""
              />
              <FileField
                accept="image/*"
                help="The image must have a square format. Example: 200x200 pixels"
                label="Company icon"
                noPreview={false}
                onChange={[Function]}
                placeholder="Select a file..."
                returnFiles={false}
                type="file"
                value=""
              />
              <InputField
                label="Introduction text"
                onChange={[Function]}
                type="text"
                value="What can we do for you?"
              />
              <InputField
                label="Input placeholder"
                onChange={[Function]}
                type="text"
                value="Type a message..."
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
            </div>
          </div>
          <ei
            className=""
            color="primary"
            disabled={false}
            tag="button"
            type="submit"
          >
            Save changes
          </ei>
          <ConfirmButton
            className="pull-right"
            color="danger"
            confirm={[Function]}
            content="Are you sure you want to delete this integration?"
            disabled={false}
            id=""
            loading={false}
            outline={true}
            placement="bottom"
            skip={false}
            title="Are you sure?"
            type="button"
          >
            Delete chat
          </ConfirmButton>
        </rl>
      </Ot>
      <Ot
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <ChatIntegrationPreview
          conversationColor="#0d87dd"
          currentUser={
            Immutable.Map {
            }
          }
          icon=""
          inputPlaceholder="Type a message..."
          introductionText="What can we do for you?"
          mainColor="#0d87dd"
          name=""
        />
      </Ot>
    </bt>
  </gt>
</div>
`;
